added google analytics

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dq829orud/image/upload/v1748541687/IMG_3058-modified_t9vp2l.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sumit Singh</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://res.cloudinary.com/dq829orud/image/upload/v1748541687/IMG_3058-modified_t9vp2l.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sumit Singh</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6TPFJ6XGBE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-6TPFJ6XGBE');
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
